--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@tabler/core": "^1.4.0",
         "@tailwindcss/vite": "^4.1.11",
+        "admin-lte": "^4.0.0-rc3",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0",
-        "tailwindcss": "^4.0.7",
-        "vite": "^7.0.4"
+        "tailwindcss": "^4.0.7"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "laravel-vite-plugin": "^2.0.1",
+        "vite": "^7.2.1"
     }
 }
